# wagtail-360

./: .coveragerc  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  fixtures.py  manage.py  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: codequality.yml  testing.yml
app/: urls.py  wsgi.py
app/settings/: base.py  dev.py
app/templates/: base.html
app/virtual_tours/: apps.py  models.py
app/virtual_tours/migrations/: 0001_initial.py  0002_alter_panoramapage_options.py  0003_tourpage_zoom_level_alter_tourpage_maps_url.py  0004_alter_panoramapage_elevation_and_more.py  0005_panoramapage_body.py
client/: sass.js
client/js/admin/: parse_url.js
client/js/public/: panorama.js
client/sass/admin/: panorama_panel.scss
client/scripts/: rollup.config.mjs
client/testapp/js/: panorama.js
client/wagtail/js/: parse_url.js  street_view.js
docs/: contribute.md  useage.md
fixtures/: dump.json
test/: apps.py  factories.py  local.py.example  maps_api_key.py.example  settings.py  test_abstract_models.py  test_factories.py  test_forms.py  test_panels.py
test/testapp/: apps.py  models.py
test/testapp/migrations/: 0002_create_homepage.py  0003_panoramapage_tourpage.py
test/testapp/templates/: base.html
wagtail_360/: abstract_models.py  apps.py  forms.py  models.py  panels.py  utils.py
wagtail_360/templates/wagtail_360/: panorama_page.html  tour_page.html
wagtail_360/test/: apps.py  factories.py  local.py.example  models.py  settings.py
(+27 files in other folders)
